Added Geneirodan.EntityFrameworkCore package

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,6 +7,6 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Authors>Geneirodan</Authors>
         <RepositoryUrl>https://github.com/Geneirodan/Packages</RepositoryUrl>
-        <DocumentationFile>Documetation.xml</DocumentationFile>
+        <DocumentationFile>Documentation.xml</DocumentationFile>
     </PropertyGroup>
 </Project>
