--- a/Tests/Geneirodan.EntityFrameworkCore.Tests/Geneirodan.EntityFrameworkCore.Tests.csproj
+++ b/Tests/Geneirodan.EntityFrameworkCore.Tests/Geneirodan.EntityFrameworkCore.Tests.csproj
@@ -13,5 +13,9 @@
     <PackageReference Include="Moq" />
     <PackageReference Include="Shouldly" />
     <PackageReference Include="xunit" />
+    <PackageReference Include="xunit.runner.visualstudio">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
