--- a/Src/Geneirodan.Abstractions/Geneirodan.Abstractions.csproj
+++ b/Src/Geneirodan.Abstractions/Geneirodan.Abstractions.csproj
@@ -1,1 +1,5 @@
-<Project Sdk="Microsoft.NET.Sdk"/>
+<Project Sdk="Microsoft.NET.Sdk">
+  <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
+  </ItemGroup>
+</Project>
