--- a/Src/Geneirodan.EntityFrameworkCore/Geneirodan.EntityFrameworkCore.csproj
+++ b/Src/Geneirodan.EntityFrameworkCore/Geneirodan.EntityFrameworkCore.csproj
@@ -5,7 +5,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+      <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
     </ItemGroup>
 
 </Project>
