--- a/Src/Geneirodan.MediatR/Geneirodan.MediatR.csproj
+++ b/Src/Geneirodan.MediatR/Geneirodan.MediatR.csproj
@@ -8,10 +8,11 @@
 
     <ItemGroup>
         <PackageReference Include="Ardalis.Result.FluentValidation" Version="10.1.0" />
-        <PackageReference Include="MediatR" Version="12.4.1" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.3" />
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.3" />
-        <PackageReference Include="Microsoft.Extensions.Telemetry.Abstractions" Version="9.3.0" />
+        <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
+        <PackageReference Include="MediatR" Version="12.5.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
+        <PackageReference Include="Microsoft.Extensions.Telemetry.Abstractions" Version="9.4.0" />
         <PackageReference Include="Serilog" Version="4.2.0" />
     </ItemGroup>
 
