--- a/Src/Geneirodan.Observability/Geneirodan.Observability.csproj
+++ b/Src/Geneirodan.Observability/Geneirodan.Observability.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
         <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.11.2" />
         <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.11.2" />
         <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.11.1" />
