Remove Documentation.xml from project output and enable documentation file generation

--- a/Src/Directory.Build.props
+++ b/Src/Directory.Build.props
@@ -6,11 +6,6 @@
         <Nullable>enable</Nullable>
         <Authors>Geneirodan</Authors>
         <RepositoryUrl>https://github.com/Geneirodan/Packages</RepositoryUrl>
-        <DocumentationFile>Documentation.xml</DocumentationFile>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
-    <ItemGroup>
-        <None Include="Documentation.xml" Pack="true">
-        <PackageCopyToOutput>true</PackageCopyToOutput>
-    </None>
-</ItemGroup>
 </Project>
