--- a/Src/Directory.Build.props
+++ b/Src/Directory.Build.props
@@ -1,11 +1,14 @@
 <Project>
-    <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <OutputType>Library</OutputType>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <Authors>Geneirodan</Authors>
-        <RepositoryUrl>https://github.com/Geneirodan/Packages</RepositoryUrl>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
+    <OutputType>Library</OutputType>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <Authors>Geneirodan</Authors>
+    <RepositoryUrl>https://github.com/Geneirodan/Packages</RepositoryUrl>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="GitVersion.MsBuild"/>
+  </ItemGroup>
 </Project>
