--- a/Src/Geneirodan.MediatR/Geneirodan.MediatR.csproj
+++ b/Src/Geneirodan.MediatR/Geneirodan.MediatR.csproj
@@ -1,23 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <PackageReference Include="Ardalis.Result.FluentValidation" Version="10.1.0" />
-        <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
-        <PackageReference Include="MediatR" Version="12.5.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
-        <PackageReference Include="Microsoft.Extensions.Telemetry.Abstractions" Version="9.4.0" />
-        <PackageReference Include="Serilog" Version="4.2.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Geneirodan.Abstractions\Geneirodan.Abstractions.csproj" />
-    </ItemGroup>
-    
+  <ItemGroup>
+    <PackageReference Include="Ardalis.Result.FluentValidation"/>
+    <PackageReference Include="MediatR"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions"/>
+    <PackageReference Include="Microsoft.Extensions.Telemetry.Abstractions"/>
+    <PackageReference Include="Serilog"/>
+    <PackageReference Remove="GitVersion.MsBuild" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Geneirodan.Abstractions\Geneirodan.Abstractions.csproj"/>
+  </ItemGroup>
 </Project>
