Remove GitVersion.MsBuild references and add health check endpoint mapping

--- a/Src/Geneirodan.AspNetCore/Geneirodan.AspNetCore.csproj
+++ b/Src/Geneirodan.AspNetCore/Geneirodan.AspNetCore.csproj
@@ -4,7 +4,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Ardalis.Result"/>
+    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer"/>
-    <PackageReference Remove="GitVersion.MsBuild" />
   </ItemGroup>
 </Project>
