--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,8 +1,1 @@
-workflow: GitFlow/v1
-branches:
-  main:
-    increment: Minor
-    is-release-branch: true
-  develop:
-    increment: Patch
-mode: ContinuousDeployment
+workflow: TrunkBased/v1
