--- a/Src/Geneirodan.AspNetCore/Geneirodan.AspNetCore.csproj
+++ b/Src/Geneirodan.AspNetCore/Geneirodan.AspNetCore.csproj
@@ -6,5 +6,6 @@
     <PackageReference Include="Ardalis.Result"/>
     <PackageReference Include="AspNetCore.HealthChecks.UI.Client" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer"/>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
   </ItemGroup>
 </Project>
