--- a/Tests/Directory.Packages.props
+++ b/Tests/Directory.Packages.props
@@ -13,10 +13,10 @@
     <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="Serilog.Sinks.TestCorrelator" Version="4.0.0" />
     <PackageVersion Include="Shouldly" Version="4.3.0" />
-    <PackageVersion Include="xunit" Version="2.9.3" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
+    <PackageVersion Include="xunit.v3" Version="2.0.2" />
   </ItemGroup>
 </Project>
