--- a/Tests/Geneirodan.MediatR.Tests/Geneirodan.MediatR.Tests.csproj
+++ b/Tests/Geneirodan.MediatR.Tests/Geneirodan.MediatR.Tests.csproj
@@ -9,11 +9,11 @@
     <PackageReference Include="Moq"/>
     <PackageReference Include="Serilog.Sinks.TestCorrelator"/>
     <PackageReference Include="Shouldly"/>
-    <PackageReference Include="xunit"/>
     <PackageReference Include="xunit.runner.visualstudio">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="xunit.v3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Sample\Geneirodan.SampleApi\Geneirodan.SampleApi.csproj"/>
