Refactor IUser and HttpUser to use non-nullable Guid for Id property. Fix warnings. Update version to 1.0.4

--- a/Tests/Directory.Build.props
+++ b/Tests/Directory.Build.props
@@ -8,4 +8,10 @@
   <ItemGroup>
     <Using Include="Xunit"/>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Meziantou.Analyzer">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
